--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "devDependencies": {
     "react-scripts": "0.8.4",
+    "react-test-renderer": "^15.4.2",
     "redux-devtools": "^3.3.1"
   },
   "dependencies": {
