--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
   },
   "dependencies": {
     "d3": "^4.5.0",
-    "material-ui": "^0.16.5",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
-    "react-redux": "^5.0.1",
-    "react-router": "^3.0.0",
+    "material-ui": "^0.16.7",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.2",
+    "react-router": "^3.0.2",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
-    "redux-form": "^6.3.2",
+    "redux-devtools": "^3.3.2",
+    "redux-form": "^6.5.0",
     "redux-form-material-ui": "^4.1.2",
     "redux-saga": "^0.13.0"
   },
