--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "redux-devtools": "^3.3.2",
     "redux-form": "^6.5.0",
     "redux-form-material-ui": "^4.1.2",
+    "redux-localstorage": "^1.0.0-rc5",
+    "redux-localstorage-filter": "^0.1.1",
     "redux-saga": "^0.13.0"
   },
   "scripts": {
